Changed directory structure and adjusted readme with commands